--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
- 
   "name": "my-scd-appp",
   "version": "0.1.0",
   "private": true,
@@ -7,8 +6,12 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-native-text-gradient": "^0.1.7",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
